# smartremote

./: .gitignore  README.md  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-apt.yml
debian/: changelog  control  copyright  rules
docs/: architecture.md  hardware.txt  job-format.md
examples/: 01-annotate-bootstrap-yolo.md  02-automl-hpo.md  03-cpp-tensorrt-lib.md  04-slam-research.md  05-model-scout.md
packaging/: apt-index.html
scripts/: submit.sh
smartremote/: __init__.py  cli.py  config.py  dispatcher.py  doctor.py  hermes.py  hermes_setup.py  job.py  models.py  providers.py  publish.py  run_job.py  scout.py  selftest.py  state.py
smartremote/runners/: __init__.py  cloud.py  demo.py  local.py  pipeline.py  scout.py
systemd/: smartremote.service
tests/: conftest.py  test_smoke.py
