[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartremote"
version = "0.1.0"
description = "A dumb, deterministic single-GPU job dispatcher with human-in-the-loop over WhatsApp/email."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sizyph", email = "steepening@gmail.com" }]
keywords = ["gpu", "job-queue", "dispatcher", "human-in-the-loop", "mlops", "jetson"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Topic :: System :: Distributed Computing",
]
dependencies = ["pyyaml>=6"]

[project.urls]
Homepage = "https://github.com/sizyph/smartremote"
Issues = "https://github.com/sizyph/smartremote/issues"

[project.scripts]
smartremote = "smartremote.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["smartremote*"]
